added my profiles of github and linkedin

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="nav-brand">skyie@</div>
+            <div  class="nav-brand">skyie@</div>
             <div class="nav-links">
-                <a href="#projects" class="nav-link">Work</a>
                 <a href="#about" class="nav-link">Experience</a>
+                <a href="#projects" class="nav-link">Work</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <a href="#" class="nav-resume-btn" download>
@@ -93,14 +93,14 @@
                                 </div>
                                 <div class="card-avatar-large">
                                     <div class="avatar-gradient">
-                                        <img src="photo.jpeg" alt="Skyie@ Avatar" class="avatar-image">
+                                        <img src="photo.jpeg" alt="#" class="avatar-image">
                                     </div>
                                 </div>
                             </div>
                             <div class="card-user-info">
                                 <div class="user-info-content">
                                     <div class="user-mini-avatar">
-                                        <img src="photo.jpeg" alt="Skyie@ Avatar" class="avatar-image">
+                                        <img src="photo.jpeg" alt="#" class="avatar-image">
                                     </div>
                                     <div class="user-details">
                                         <div class="user-handle">@Skyie__</div>
@@ -143,14 +143,14 @@ I’m driven by the desire to learn something new every day, to combine logic wi
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" target="_blank" class="social-link" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/bhushan-kolte-458561380/" target="_blank" class="social-link" title="LinkedIn">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
                                 <circle cx="4" cy="4" r="2"></circle>
                             </svg>
                         </a>
-                        <a href="#" target="_blank" class="social-link" title="GitHub">
+                        <a href="https://github.com/skyiekoltepatil" target="_blank" class="social-link" title="GitHub">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                             </svg>
@@ -359,14 +359,14 @@ I’m driven by the desire to learn something new every day, to combine logic wi
                 <div class="footer-section">
                     <h4>Connect</h4>
                     <div class="footer-social">
-                        <a href="#" target="_blank" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/bhushan-kolte-458561380/" target="_blank" title="LinkedIn">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
                                 <circle cx="4" cy="4" r="2"></circle>
                             </svg>
                         </a>
-                        <a href="#" target="_blank" title="GitHub">
+                        <a href="https://github.com/skyiekoltepatil" target="_blank" title="GitHub">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                             </svg>
@@ -376,7 +376,7 @@ I’m driven by the desire to learn something new every day, to combine logic wi
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 skyie@Portfolio. All rights reserved.</p>
-                <button id="backToTop" class="back-to-top">
+                <button  id="backToTop" class="back-to-top">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 19V5M5 12l7-7 7 7"/>
                     </svg>
