add hero particle background

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-background"></div>
+        <!-- Added Particle Canvas -->
+        <canvas id="particleCanvas"></canvas>
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="hero-title">
@@ -71,8 +72,6 @@
                     <a href="#contact" class="btn btn-secondary">reach out to me</a>
                 </div>
             </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -84,7 +83,6 @@
                 <!-- 3D Profile Card Column -->
                 <div class="about-profile-card">
                     <div class="profile-card-3d" id="profileCard3D">
-                        <div class="card-glow"></div>
                         <div class="card-inner">
                             <div class="card-content-wrapper">
                                 <div class="card-header">
@@ -92,11 +90,11 @@
                                     <p class="card-title">Video Editor & AI Student</p>
                                 </div>
                                 <div class="card-avatar-large">
-                                    <div class="avatar-gradient"><img src="" alt="S"></div>
+                                    <div class="avatar-gradient">S</div>
                                 </div>
                                 <div class="card-user-info">
                                     <div class="user-info-content">
-                                        <div class="user-mini-avatar"><img src="" alt="S"></div>
+                                        <div class="user-mini-avatar">S</div>
                                         <div class="user-details">
                                             <div class="user-handle">@skyie</div>
                                             <div class="user-status">
