--- a/index.html
+++ b/index.html
@@ -387,6 +387,68 @@
         </div>
     </footer>
 
+    <!-- SKYIE AI CHATBOT -->
+    <div id="skyie-chatbot-container">
+        <!-- Toggle Button -->
+        <button id="chatbot-toggle" class="chatbot-toggle" aria-label="Toggle Chatbot">
+            <span class="chatbot-icon">@</span>
+            <span class="chatbot-close-icon">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </span>
+        </button>
+
+        <!-- Chat Window -->
+        <div id="chatbot-widget" class="chatbot-widget">
+            <div class="chatbot-header">
+                <div class="chatbot-info">
+                    <span class="status-dot-online"></span>
+                    <div class="chatbot-title-container">
+                        <div class="chatbot-title">Skyie AI</div>
+                        <div class="chatbot-subtitle">Ask me anything</div>
+                    </div>
+                </div>
+                <button id="chatbot-close" class="chatbot-header-close" aria-label="Close Chat">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+            </div>
+            
+            <div class="chatbot-body" id="chatbot-messages">
+                <!-- Initial Bot Message -->
+                <div class="chat-message bot fade-in-msg">
+                    <div class="chat-avatar">@</div>
+                    <div class="chat-bubble">
+                        <div class="chat-text">Hi! I'm Skyie AI. Ask me about Skyie's projects, editing skills, or how to contact him! 🎨🤖</div>
+                    </div>
+                </div>
+                
+                <!-- Suggestions -->
+                <div class="chat-suggestions" id="chat-suggestions">
+                    <button class="suggestion-btn" onclick="sendSuggestion('Tell me about your video editing')">Tell me about video editing</button>
+                    <button class="suggestion-btn" onclick="sendSuggestion('What data science projects do you have?')">Data Science projects?</button>
+                    <button class="suggestion-btn" onclick="sendSuggestion('How can I contact you?')">How can I contact you?</button>
+                </div>
+            </div>
+
+            <div class="chatbot-footer">
+                <div class="input-container">
+                    <input type="text" id="chatbot-input" placeholder="Ask about my work..." autocomplete="off">
+                    <button id="chatbot-send" aria-label="Send Message">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="22" y1="2" x2="11" y2="13"></line>
+                            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
