effect on 3d hover profile card

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                 <div class="about-profile-card">
                     <div class="profile-card-3d" id="profileCard3D">
                         <div class="card-inner">
+                            <!-- ADDED: Glare Effect Container -->
+                            <div class="card-glare"></div>
+                            
                             <div class="card-content-wrapper">
                                 <div class="card-header">
                                     <h3 class="card-name">Skyie@</h3>
