updated profile card

--- a/index.html
+++ b/index.html
@@ -88,21 +88,42 @@
         <div class="container">
             <h2 class="section-title fade-in">About Me</h2>
             <div class="about-container">
-                <!-- 3D Profile Card Column -->
+                <!-- 3D Profile Card Column (UPDATED DESIGN) -->
                 <div class="about-profile-card">
                     <div class="profile-card-3d" id="profileCard3D">
-                        <div class="card-inner">
+                        <div class="card-inner card-design-green">
                             <!-- Glare Effect Container -->
                             <div class="card-glare"></div>
                             
-                            <div class="card-content-wrapper">
-                                <div class="card-header">
-                                    <h3 class="card-name">Skyie@</h3>
-                                    <p class="card-title">Video Editor & AI Student</p>
+                            <!-- Background Decoration -->
+                            <div class="card-bg-pattern top-left">&lt;/&gt;</div>
+                            <div class="card-bg-pattern bottom-right">#AI</div>
+
+                            <div class="card-content-main">
+                                <div class="card-header-new">
+                                    <h3 class="card-name-new">Skyie@</h3>
+                                    <p class="card-role-new">Video Editor & AI Student</p>
                                 </div>
-                                <div class="card-avatar-large">
-                                    <div class="avatar-gradient">S</div>
+                                
+                                <!-- Main Portrait Image -->
+                                <div class="card-portrait-container">
+                                    <!-- Using placeholder illustration, replace src with your actual transparent PNG photo -->
+                                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Skyie&backgroundColor=transparent&clothing=blazerAndShirt&eyes=happy" alt="Profile" class="card-portrait-img">
                                 </div>
+                            </div>
+
+                            <!-- Glassmorphism Bottom Bar -->
+                            <div class="card-glass-bar">
+                                <div class="glass-user-info">
+                                    <div class="glass-avatar">
+                                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Skyie&backgroundColor=b6e3f4" alt="Avatar">
+                                    </div>
+                                    <div class="glass-text">
+                                        <span class="glass-handle">@skyiekoltepatil</span>
+                                        <span class="glass-status">Online</span>
+                                    </div>
+                                </div>
+                                <a href="#contact" class="glass-contact-btn">Contact Me</a>
                             </div>
                         </div>
                     </div>
