update profile card with example image

--- a/index.html
+++ b/index.html
@@ -95,28 +95,16 @@
                             <!-- Glare Effect Container -->
                             <div class="card-glare"></div>
                             
-                            <!-- Background Decoration -->
-                            <div class="card-bg-pattern top-left">&lt;/&gt;</div>
-                            <div class="card-bg-pattern bottom-right">#AI</div>
-
+                            <!-- Removed Text and AI Tags as requested -->
                             <div class="card-content-main">
-                                <div class="card-header-new">
-                                    <h3 class="card-name-new">Skyie@</h3>
-                                    <p class="card-role-new">Video Editor & AI Student</p>
-                                </div>
-                                
-                                <!-- Main Portrait Image -->
-                                <div class="card-portrait-container">
-                                    <!-- Using placeholder illustration, replace src with your actual transparent PNG photo -->
-                                    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Skyie&backgroundColor=transparent&clothing=blazerAndShirt&eyes=happy" alt="Profile" class="card-portrait-img">
-                                </div>
+                                <!-- Empty container to maintain flex structure if needed -->
                             </div>
 
                             <!-- Glassmorphism Bottom Bar -->
                             <div class="card-glass-bar">
                                 <div class="glass-user-info">
                                     <div class="glass-avatar">
-                                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Skyie&backgroundColor=b6e3f4" alt="Avatar">
+                                        <img src="1.jpeg" alt="Avatar">
                                     </div>
                                     <div class="glass-text">
                                         <span class="glass-handle">@skyiekoltepatil</span>
