choosing background for  portfolio

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <div class="chatbot-info">
                     <span class="status-dot-online"></span>
                     <div class="chatbot-title-container">
-                        <div class="chatbot-title">Skyie AI</div>
+                        <div class="chatbot-title">LLME</div>
                         <div class="chatbot-subtitle">Ask me anything</div>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
                 <div class="chat-message bot fade-in-msg">
                     <div class="chat-avatar">@</div>
                     <div class="chat-bubble">
-                        <div class="chat-text">Hi! I'm Skyie AI. Ask me about Skyie's projects, editing skills, or how to contact him! 🎨🤖</div>
+                        <div class="chat-text">Hi! I'm LLME. Ask me about Skyie's projects, editing skills, or how to contact him! 🎨🤖</div>
                     </div>
                 </div>
                 
