--- a/index.html
+++ b/index.html
@@ -170,6 +170,26 @@
                     </div>
                 </div>
             </div>
+
+            <!-- New Quote Section Added Here -->
+            <div class="quote-container fade-in">
+                <div class="quote-card">
+                    <div class="quote-icon">
+                        <!-- Updated Standard Solid Opening Quote SVG -->
+                        <svg width="60" height="60" viewBox="0 0 24 24" fill="currentColor">
+                           <path d="M4.583 17.321C3.553 16.227 3 15 3 13.011c0-3.5 2.457-6.637 6.03-8.188l.893 1.378c-3.335 1.804-3.987 4.145-4.247 5.621.537-.278 1.24-.375 1.929-.311 1.804.167 3.226 1.648 3.226 3.489a3.5 3.5 0 0 1-3.5 3.5c-1.073 0-2.099-.49-2.748-1.179zm10 0C13.553 16.227 13 15 13 13.011c0-3.5 2.457-6.637 6.03-8.188l.893 1.378c-3.335 1.804-3.987 4.145-4.247 5.621.537-.278 1.24-.375 1.929-.311 1.804.167 3.226 1.648 3.226 3.489a3.5 3.5 0 0 1-3.5 3.5c-1.073 0-2.099-.49-2.748-1.179z"/>
+                        </svg>
+                    </div>
+                    <p class="quote-text">
+                        <strong>Dream</strong> are those, you aren't able to sleep <strong>Until you achieve it</strong>.
+                    </p>
+                    <div class="quote-author">
+                        ~ Skyie
+                        <div class="author-line"></div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
